--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -8,8 +8,59 @@
 		<div class="section-content-box __pt">
 			<a href="mailto:archmotorcycle@gmail.com" class="h-5 section-content-subtitle">archmotorcycle<span class="red">@</span>gmail<span class="red">.</span>com</a>
 			<h3 class="h-3 section-content-title">Get in touch</h3>
+			<div class="footer-social">
+				<ul>
+					<li>
+						<a href="https://www.facebook.com/archmotorcycle" target="_blank" class="footer-social-link link link-lg">
+							Facebook
+							<span class="link-icon">
+								<svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M7.91901 0V2H23.919V18H25.919V2V0H23.919H7.91901Z" />
+									<rect y="24.5967" width="33.3707" height="2" transform="rotate(-45 0 24.5967)" />
+								</svg>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://twitter.com/archmotorcycle/" target="_blank" class="footer-social-link link link-lg">
+							Twitter
+							<span class="link-icon">
+								<svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M7.91901 0V2H23.919V18H25.919V2V0H23.919H7.91901Z" />
+									<rect y="24.5967" width="33.3707" height="2" transform="rotate(-45 0 24.5967)" />
+								</svg>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://www.youtube.com/channel/UCkmbqgfpgnFxKhbgel8Nz4w" target="_blank" class="footer-social-link link link-lg">
+							Youtube
+							<span class="link-icon">
+								<svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M7.91901 0V2H23.919V18H25.919V2V0H23.919H7.91901Z" />
+									<rect y="24.5967" width="33.3707" height="2" transform="rotate(-45 0 24.5967)" />
+								</svg>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://www.instagram.com/archmotorcycle/" target="_blank" class="footer-social-link link link-lg">
+							Instagram
+							<span class="link-icon">
+								<svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M7.91901 0V2H23.919V18H25.919V2V0H23.919H7.91901Z" />
+									<rect y="24.5967" width="33.3707" height="2" transform="rotate(-45 0 24.5967)" />
+								</svg>
+							</span>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<div class="section-content-box">
+			<div class="footer-banner">
+				<img src="../../images/footer/footer-banner.jpg" alt="Get in touch" />
+			</div>
 			<div class="footer-nav">
 				<nav>
 					<ul>
