--- a/src/html/index.html.ejs
+++ b/src/html/index.html.ejs
@@ -63,35 +63,12 @@
 								<div class="video-mask"></div>
 							</div>
 						</div>
-						<section class="section">
-							<%=require('./pages/home/hero.html')%>
-						</section>
-						<section class="section __motorcycle">
-							<%=require('./pages/home/krgt-1.html')%>
-						</section>
-						<section class="section __motorcycle"
-										 data-scroll
-										 data-scroll-offset="50%, 50%"
-										 data-scroll-repeat="true"
-										 data-scroll-call="switchToWhiteColorTheme">
-							<%=require('./pages/home/1s.html')%>
-						</section>
-						<section class="section __motorcycle">
-							<%=require('./pages/home/method-143.html')%>
-						</section>
+						<%=require('./pages/home/hero.html')%>
+						<%=require('./pages/home/krgt-1.html')%>
+						<%=require('./pages/home/1s.html')%>
+						<%=require('./pages/home/method-143.html')%>
 					</div>
-					<div class="section"
-							 data-scroll
-							 data-scroll-offset="10%,0"
-							 data-scroll-repeat="true"
-							 data-scroll-call="homeAboutBanner">
-						<div class="section-banner">
-							<img src="images/pages/home/about-bg-2.jpg"
-									 alt="About ARCH Motorcycle"
-									 data-scroll
-									 data-scroll-speed="-5" />
-						</div>
-					</div>
+					<%=require('./pages/home/banner.html')%>
 					<%=require('./pages/home/about.html')%>
 					<%=require('./pages/home/videos.html')%>
 					<%=require('./components/footer.html')%>
