--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -47,3 +47,11 @@
     font-display: swap;
   }
 }
+
+// IMAGE COVER //
+@mixin imageCover($position) {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: $position;
+}
