--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -18,9 +18,13 @@
 			display: inline-block;
 			width: 26px;
 			height: 26px;
+			width: 3vmin;
+			height: 3vmin;
 			margin-left: 40px;
-				path, rect{
+				svg{
 					fill: currentColor;
+					width: 100%;
+					height: 100%;
 				}
 		}
 }
