--- a/src/sass/components/_link.scss
+++ b/src/sass/components/_link.scss
@@ -1,5 +1,27 @@
 .link{
-	display: inline-block;
+	display: inline-flex;
+	align-items: center;
+	justify-content: space-between;
 	font-size: 20px;
+	font-size: 2.335vmin;
 	line-height: 1em;
+	position: relative;
+		// sizes //
+		&-lg{
+			font-size: 24px;
+		}
+		&-icon{
+			width: 26px;
+			height: 26px;
+			width: 3vmin;
+			height: 3vmin;
+			display: inline-block;
+			color: var(--color-red);
+			margin-left: 50px;
+				svg{
+					width: 100%;
+					height: 100%;
+					fill: currentColor;
+				}
+		}
 }
