--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -8,6 +8,7 @@
 	display: none;
 	opacity: 0;
 	z-index: 9;
+	transition: opacity var(--opacity-duration) var(--opacity-ease);
 		&-close{
 			position: absolute;
 			inset: 0;
@@ -54,5 +55,8 @@
 					width: 90px;
 					pointer-events: none;
 				}
+		}
+		&.is-visible{
+			opacity: 1;
 		}
 }
