--- a/src/sass/pages/home/_testimonials.scss
+++ b/src/sass/pages/home/_testimonials.scss
@@ -1,6 +1,7 @@
 .testimonials{
 	background-color: var(--color-yellow);
 	padding: 203px 0 62px;
+	text-align: center;
 		&-carousel{
 			margin-top: -293px;
 			//margin-left: -63px;
